# naiveSTL

./: .clang-format  .cmake-format  CMakeLists.txt  README.md  allocator.h  allocator_traits.h  format.sh  main.cpp  set.h  test.sh
.github/workflows/: test.yaml
core/: __tree.h  config.h
include/: allocator.h  allocator_traits.h  iterator.h  set.h  vector.h
include/core/: __tree.h  compressed_pair.h  config.h
test/: CMakeLists.txt
test/allocator/: CMakeLists.txt  main.cpp
test/iterator/: main.cpp
